--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -635,7 +635,7 @@ end
 if __FILE__ == $PROGRAM_NAME
   parser = OptionParserWithDefaultAndValidation.new
 
-  parser.banner = "Usage: #{File.basename($PROGRAM_NAME)} [options] [[--] command]"
+  parser.banner = "Usage: #{File.basename($PROGRAM_NAME)} [options] [--] [command]"
 
   parser.on('--trace-output PATH', 'Define where the ctf trace will be saved',
             'Default path is something like: $THAPI_HOME/thapi-traces/thapi--%Y-%m-%d--%Hh%Mm%Ss',
