--- a/cuda/test_wrapper_thapi_text_pretty.sh.in
+++ b/cuda/test_wrapper_thapi_text_pretty.sh.in
@@ -5,8 +5,8 @@ set -euxo pipefail
 
 btx_model_path="@builddir@/btx_cuda_model.yaml"
 trace_path="$1"
-trace_name="$(basename ${trace_path%.thapilog})"
-expected_output_path="$(dirname $trace_path)/${trace_name}.bt2out"
+trace_name="$(basename ${trace_path%.thapi_text_pretty})"
+expected_output_path="$(dirname $trace_path)/${trace_name}.bt_text_pretty"
 out_dir="@abs_builddir@/tests/$trace_name"
 metababel_out_dir="${out_dir}/btx_source"
 cleaned_model_path="${out_dir}/btx_model.yaml"
@@ -16,7 +16,7 @@ mkdir -p "${out_dir}"
   "$btx_model_path" "${cleaned_model_path}"
 
 trace_fname=$(basename "$trace_path")
-source_c_fname="${trace_fname%.thapilog}.c"
+source_c_fname="${trace_fname%.bt_text_pretty}.c"
 source_c_path="${out_dir}/${source_c_fname}"
 
 set -x
