--- a/hip/test_wrapper_thapi_text_pretty.sh.in
+++ b/hip/test_wrapper_thapi_text_pretty.sh.in
@@ -3,10 +3,10 @@ set -euxo pipefail
 
 : "${CC:=gcc}"
 
-btx_model_path="@builddir@/btx_ze_model.yaml"
+btx_model_path="@builddir@/btx_hip_model.yaml"
 trace_path="$1"
-trace_name="$(basename ${trace_path%.thapilog})"
-expected_output_path="$(dirname $trace_path)/${trace_name}.bt2out"
+trace_name="$(basename ${trace_path%.thapi_text_pretty})"
+expected_output_path="$(dirname $trace_path)/${trace_name}.bt_text_pretty"
 out_dir="@abs_builddir@/tests/$trace_name"
 metababel_out_dir="${out_dir}/btx_source"
 cleaned_model_path="${out_dir}/btx_model.yaml"
@@ -16,7 +16,7 @@ mkdir -p "${out_dir}"
   "$btx_model_path" "${cleaned_model_path}"
 
 trace_fname=$(basename "$trace_path")
-source_c_fname="${trace_fname%.thapilog}.c"
+source_c_fname="${trace_fname%.bt_text_pretty}.c"
 source_c_path="${out_dir}/${source_c_fname}"
 
 set -x
@@ -25,7 +25,7 @@ set -x
   -i "$trace_path" -o "$source_c_path"
 
 metababel -d "$cleaned_model_path" -t SOURCE -o "${metababel_out_dir}" \
-  -p generated -i ze.h.include
+  -p generated -i hip.h.include
 
 ${CC} -g -Werror -o ${out_dir}/btx_source.so \
   -I ${metababel_out_dir} -I @top_srcdir@/utils/include \
@@ -41,7 +41,7 @@ babeltrace_pretty_out="${out_dir}"/thapi-events-babeltrace.txt
 valgrind \
   babeltrace2 --plugin-path="${out_dir}:@builddir@/.libs/" \
   --component=source.generated.btx \
-  --component=filter.zeinterval.interval \
+  --component=filter.hipinterval.interval \
   > "${babeltrace_pretty_out}"
 
 diff "$expected_output_path" "$babeltrace_pretty_out"
