--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -86,6 +86,8 @@ jobs:
         working-directory: build
       - run: make check
         working-directory: build
+        env:
+          THAPI_VALGRIND: 1
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
@@ -155,6 +157,8 @@ jobs:
       - run: ./configure
       - run: make -j
       - run: make check
+        env:
+          THAPI_VALGRIND: 1
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
@@ -193,6 +197,8 @@ jobs:
         working-directory: build
       - run: make distcheck -j
         working-directory: build
+        env:
+          THAPI_VALGRIND: 1
 
   dist-check:
     needs: [babeltrace2, pre_job]
@@ -239,6 +245,8 @@ jobs:
           cd build
           make -j check
         working-directory: build
+        env:
+          THAPI_VALGRIND: 1
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
