convert yaml tests to thapilog (#185)
* tests: use thapilog instead of yaml for test cases

Converts tests for btx backends: cuda, hip, ze

* fix Makefile formatting

always use tabs for multi-line continuations

* simplify test wrappers var set

* tests: rename thapilog/bt2out to thapi_text_pretty/bt_text_pretty

* tests: rename script that generates source component

* tests: valgrind only when THAPI_VALGRIND set

consolidate test_wrapper_thapi_text_pretty into single script,
take backend as arg

* clarify purpose of set_ts ruby script, rename

* tests: simplify thapilog parse logic

* tests: ruby script improvements in comp gen script

* use global var for empty array name

* simplify set_ts script

* tests: leave packet context fields

--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler valgrind
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -86,6 +86,8 @@ jobs:
         working-directory: build
       - run: make check
         working-directory: build
+        env:
+          THAPI_VALGRIND: 1
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
@@ -110,7 +112,7 @@ jobs:
         with:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler bats libpocl2 clinfo
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler bats libpocl2 clinfo valgrind
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -142,7 +144,7 @@ jobs:
         with:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler valgrind
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -155,6 +157,8 @@ jobs:
       - run: ./configure
       - run: make -j
       - run: make check
+        env:
+          THAPI_VALGRIND: 1
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
@@ -178,7 +182,7 @@ jobs:
         with:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler valgrind
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -193,6 +197,8 @@ jobs:
         working-directory: build
       - run: make distcheck -j
         working-directory: build
+        env:
+          THAPI_VALGRIND: 1
 
   dist-check:
     needs: [babeltrace2, pre_job]
@@ -208,7 +214,7 @@ jobs:
         with:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler valgrind
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -239,6 +245,8 @@ jobs:
           cd build
           make -j check
         working-directory: build
+        env:
+          THAPI_VALGRIND: 1
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
