--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -208,7 +208,7 @@ CLEANFILES = \
 	$(BTX_TIMELINE_GENERATED) \
 	$(BTX_TALLY_GENERATED) \
 	$(BTX_AGGREG_GENERATED) \
-	$(BTX_STRIPPER_GENERATED) \
+	$(BTX_STRIPPER_GENERATED)
 
 if FOUND_MPI
   CLEANFILES += sync_daemon_mpi
