--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -43,14 +43,24 @@ BTX_TIMELINE_GENERATED = \
 	btx_sink_timeline/btx_main.c
 
 BTX_AGGREG_GENERATED = \
-        btx_filter_aggreg/metababel/metababel.h \
-        btx_filter_aggreg/metababel/btx_component.h \
-        btx_filter_aggreg/metababel/btx_component.c \
-        btx_filter_aggreg/metababel/btx_upstream.h \
-        btx_filter_aggreg/metababel/btx_upstream.c \
-        btx_filter_aggreg/metababel/btx_downstream.h \
-        btx_filter_aggreg/metababel/btx_downstream.c \
-        btx_filter_aggreg/btx_main.c
+	btx_filter_aggreg/metababel/metababel.h \
+	btx_filter_aggreg/metababel/btx_component.h \
+	btx_filter_aggreg/metababel/btx_component.c \
+	btx_filter_aggreg/metababel/btx_upstream.h \
+	btx_filter_aggreg/metababel/btx_upstream.c \
+	btx_filter_aggreg/metababel/btx_downstream.h \
+	btx_filter_aggreg/metababel/btx_downstream.c \
+	btx_filter_aggreg/btx_main.c
+
+BTX_STRIPPER_GENERATED = \
+	btx_filter_stripper/metababel/metababel.h \
+	btx_filter_stripper/metababel/btx_component.h \
+	btx_filter_stripper/metababel/btx_component.c \
+	btx_filter_stripper/metababel/btx_upstream.h \
+	btx_filter_stripper/metababel/btx_upstream.c \
+	btx_filter_stripper/metababel/btx_downstream.h \
+	btx_filter_stripper/metababel/btx_downstream.c \
+	btx_filter_stripper/btx_main.c
 
 $(BTX_TIMELINE_GENERATED) &: $(srcdir)/btx_interval_model.yaml $(srcdir)/btx_timeline_params.yaml
 	$(METABABEL) -u $(srcdir)/btx_interval_model.yaml -t SINK -o btx_sink_timeline -p btx_timeline -c timeline --params $(srcdir)/btx_timeline_params.yaml
@@ -61,16 +71,24 @@ $(BTX_TALLY_GENERATED) &: $(srcdir)/btx_aggreg_model.yaml $(srcdir)/btx_tally_pa
 $(BTX_AGGREG_GENERATED) &: $(srcdir)/btx_interval_model.yaml $(srcdir)/btx_aggreg_model.yaml $(srcdir)/btx_aggreg_params.yaml
 	$(METABABEL) -u $(srcdir)/btx_interval_model.yaml -d $(srcdir)/btx_aggreg_model.yaml -t FILTER -o btx_filter_aggreg -p btx_aggreg -c aggreg --params $(srcdir)/btx_aggreg_params.yaml
 
+$(BTX_STRIPPER_GENERATED) &:
+	$(METABABEL) -t FILTER -o btx_filter_stripper -p btx_stripper -c stripper --enable-callbacks on_downstream
+
+btx_stripper_callbacks.cpp:
+	$(METABABEL) --display-shared-callback stripper > $@
+
 BUILT_SOURCES = \
 	$(BTX_TALLY_GENERATED) \
 	$(BTX_TIMELINE_GENERATED) \
-        $(BTX_AGGREG_GENERATED) \
+	$(BTX_AGGREG_GENERATED) \
+	$(BTX_STRIPPER_GENERATED) \
+	btx_stripper_callbacks.cpp \
 	xprof_utils.hpp \
 	perfetto_prunned.pb.h \
 	perfetto_prunned.pb.cc
 
 # Library to be packaged
-lib_LTLIBRARIES = libXTally.la libXTimeline.la libXAggreg.la
+lib_LTLIBRARIES = libXTally.la libXTimeline.la libXAggreg.la libXStripper.la
 
 # File generated but not distributed
 nodist_libXTally_la_SOURCES = \
@@ -84,8 +102,12 @@ nodist_libXTimeline_la_SOURCES = \
 	perfetto_prunned.pb.cc
 
 nodist_libXAggreg_la_SOURCES = \
-        $(BTX_AGGREG_GENERATED) \
+	$(BTX_AGGREG_GENERATED) \
 	xprof_utils.hpp
+
+nodist_libXStripper_la_SOURCES = \
+	$(BTX_STRIPPER_GENERATED) \
+	btx_stripper_callbacks.cpp
 
 # File not generated
 libXTally_la_SOURCES = \
@@ -116,20 +138,25 @@ libXTimeline_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast
 libXTimeline_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS) $(PROTOBUF_CFLAGS)
 libXTimeline_la_LDFLAGS = $(BABELTRACE2_LIBS) $(PROTOBUF_LIBS) -avoid-version -module
 
-
 libXAggreg_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_filter_aggreg
 libXAggreg_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
 libXAggreg_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
 libXAggreg_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
+
+libXStripper_la_CPPFLAGS = -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_filter_stripper
+libXStripper_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
+libXStripper_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) -fno-fast-math $(BABELTRACE2_CFLAGS)
+libXStripper_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
 
 install-exec-hook:
 	$(MKDIR_P) $(DESTDIR)$(pkglibdir)/bt2
 	$(LN) -f $(DESTDIR)$(libdir)/libXAggreg.so $(DESTDIR)$(pkglibdir)/bt2/libXAggreg.so
 	$(LN) -f $(DESTDIR)$(libdir)/libXTimeline.so $(DESTDIR)$(pkglibdir)/bt2/libXTimeline.so
 	$(LN) -f $(DESTDIR)$(libdir)/libXTally.so $(DESTDIR)$(pkglibdir)/bt2/libXTally.so
+	$(LN) -f $(DESTDIR)$(libdir)/libXStripper.so $(DESTDIR)$(pkglibdir)/bt2/libXStripper.so
 
 uninstall-hook:
-	$(RM) -f $(DESTDIR)$(pkglibdir)/bt2/libXAggreg.so $(DESTDIR)$(pkglibdir)/bt2/libXTimeline.so $(DESTDIR)$(pkglibdir)/bt2/libXTally.so
+	$(RM) $(DESTDIR)$(pkglibdir)/bt2/libXAggreg.so $(DESTDIR)$(pkglibdir)/bt2/libXTimeline.so $(DESTDIR)$(pkglibdir)/bt2/libXTally.so $(DESTDIR)$(pkglibdir)/bt2/libXStripper.so
 	-rmdir $(DESTDIR)$(pkglibdir)/bt2
 
 # Cannot use check_LTLIBRARIES because we need the shared version of those
@@ -182,9 +209,11 @@ CLEANFILES = \
 	$(TALLY_DUST_FILES) \
 	perfetto_prunned.pb.h \
 	perfetto_prunned.pb.cc \
+	btx_stripper_callbacks.cpp \
 	$(BTX_TIMELINE_GENERATED) \
 	$(BTX_TALLY_GENERATED) \
-	$(BTX_AGGREG_GENERATED)
+	$(BTX_AGGREG_GENERATED) \
+	$(BTX_STRIPPER_GENERATED)
 
 if FOUND_MPI
   CLEANFILES += sync_daemon_mpi
