--- a/opencl/tests/interval_profiling_interleave_process.yaml
+++ b/opencl/tests/interval_profiling_interleave_process.yaml
@@ -38,6 +38,7 @@
   :common_context:
     hostname: aurora12.gov
     vpid: -1
+    backend: 2
   :payload:
     name: clEnqueueSVMFree
     dur: 10
@@ -45,6 +46,7 @@
   :common_context:
     hostname: aurora12.gov
     ts: 1
+    backend: 2
   :payload:
     name: clEnqueueSVMFree
     dur: 20
