--- a/opencl/tests/interval_profiling_interleave_thread.yaml
+++ b/opencl/tests/interval_profiling_interleave_thread.yaml
@@ -39,6 +39,7 @@
   :common_context:
     hostname: aurora12.gov
     vtid: 2
+    backend: 2
   :payload:
     name: clEnqueueSVMFree
     dur: 10
@@ -47,6 +48,7 @@
     hostname: aurora12.gov
     vtid: 3
     ts: 1
+    backend: 2
   :payload:
     name: clEnqueueSVMFree
     dur: 20
