--- a/opencl/tests/interval_profiling_with_error.yaml
+++ b/opencl/tests/interval_profiling_with_error.yaml
@@ -28,6 +28,7 @@
 - :name: lttng:device
   :common_context:
     hostname: aurora12.gov
+    backend: 2
   :payload:
     name: clEnqueueSVMFree
     err: true
